# YOLO_detector

./: .gitignore  .gitmodules  README.MD  note.txt
cpp/: CMakeLists.txt  coco.names  config.json  detector.cpp  detector.h  main.cpp  network_client.cpp  network_client.h
go_service/: config.conf  go.mod  go.sum  main.go
go_service/bootstrap/: app.go  database.go  env.go  mongo_driver.go
go_service/controller/: client_controller.go  pipeline.go  tracker_controller.go  tracker_session.go
go_service/route/: route.go
protobuf/: tracker.proto  tracking_events.proto
python/: example.py  requirements.txt
scripts/: build_grpc.sh  gen-proto-go.sh  gen-proto.sh
